[gd_scene load_steps=5 format=3 uid="uid://ds3si7ixganvm"]

[ext_resource type="Script" path="res://Scripts/Floor.gd" id="1_4xruw"]
[ext_resource type="Texture2D" uid="uid://crwp60o8jd8t1" path="res://Assets/Objects/Basic Plants.png" id="1_h5ffy"]
[ext_resource type="Texture2D" uid="uid://ckq3h8sp8cgix" path="res://Assets/Objects/Basic Floor Plants.png" id="2_tfqll"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h2bn6"]
size = Vector2(12, 13.5)

[node name="Floor" type="StaticBody2D"]
z_index = -1
script = ExtResource("1_4xruw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.25)
shape = SubResource("RectangleShape2D_h2bn6")
one_way_collision = true
one_way_collision_margin = 0.0

[node name="SpriteFloor" type="Sprite2D" parent="."]
texture = ExtResource("2_tfqll")
hframes = 3

[node name="SpritePlant" type="Sprite2D" parent="."]
scale = Vector2(0.75, 0.75)
texture = ExtResource("1_h5ffy")
hframes = 6
vframes = 2

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
